public/frontend/css/main.css
/* ... */
.header .primary-header-inner .header-menu-wrap ul .menu-item-has-children:hover:after {
  color: var(--rr-color-theme-primary);
}
.header .primary-header-inner .header-right-wrap {
  display: flex;
  align-items: center;
  column-gap: 120px;
  flex-wrap: wrap;
  row-gap: 20px;
}
@media (max-width: 1399px) {
  .header .primary-header-inner .header-right-wrap {
    column-gap: 50px;
  }
}
@media (max-width: 1199px) {
  .header .primary-header-inner .header-right-wrap {
    column-gap: 20px;
  }
}
.header .primary-header-inner .header-right-wrap .header-right {
  display: flex;
  align-items: center;
}
@media only screen and (max-width: 767px) {
  .header .primary-header-inner .header-right-wrap .header-right .header-logo img {
    width: 90px;
  }
}
.header .primary-header-inner .header-right-wrap .header-right span {
  color: var(--rr-color-common-white);
  font-size: 16px;
  font-weight: 500;
}
@media only screen and (max-width: 992px) {
  .header .primary-header-inner .header-right-wrap .header-right span {
    display: none;
  }
}
.header .primary-header-inner .header-right-wrap .header-right span span {
  background-color: var(--rr-color-common-white);
  color: var(--rr-color-theme-primary);
  text-transform: uppercase;
  font-weight: 700;
  padding: 3px 15px;
  border-radius: 100px;
  margin-left: 10px;
}
.header .primary-header-inner .header-right-wrap .header-right .header-right-item .mobile-side-menu-toggle {
  color: var(--rr-color-heading-primary);
  font-size: 30px;
  opacity: 0.9;
}
@media (min-width: 993px) {
  .header .primary-header-inner .header-right-wrap .header-right .header-right-item .mobile-side-menu-toggle {
    display: none;
  }
}
.header .primary-header-inner .header-right-wrap .header-right .header-right-item .search-icon {
  font-size: 16px;
  margin-left: 55px;
  cursor: pointer;
}
@media only screen and (max-width: 992px) {
  .header .primary-header-inner .header-right-wrap .header-right .header-right-item .search-icon {
    margin-right: 20px;
  }
}
@media only screen and (max-width: 992px) {
  .header .primary-header-inner .mean-push {
    display: none;
  }
}

.header-2 {
  margin-bottom: 0;
}
.header-2 .top-bar {
  background-color: var(--rr-color-common-white);
  border-top: 5px solid var(--rr-color-theme-green);
  border-bottom: 1px solid var(--rr-color-border-1);
}
@media only screen and (max-width: 992px) {
  .header-2 .top-bar .top-bar-inner {
    justify-content: center;
  }
}
.header-2 .top-bar .top-bar-inner .top-bar-left .top-left-list li a {
  color: var(--rr-color-text-body);
  font-weight: 400;
}
.header-2 .top-bar .top-bar-inner .top-bar-left .top-left-list li a:hover {
  color: var(--rr-color-theme-primary);
}
@media (max-width: 1399px) {
  .header-2 .header-middle-inner .header-middle-left {
    column-gap: 30px;
  }
}
.header-2 .header-middle-inner .header-middle-left .select-control {
  background-color: var(--rr-color-grey-1);
  border: none;
  padding: 14px 20px 14px 40px;
  height: auto;
  line-height: inherit;
  border-radius: 100px;
  color: var(--rr-color-heading-primary);
  font-size: 14px;
  font-weight: 500;
  margin-right: 15px;
}
.header-2 .header-middle-inner .header-middle-left .select-control:after {
  width: auto;
  height: auto;
  border: none;
}
.header-2 .header-middle-inner .header-middle-left .select-control:before {
  background-image: none;
  font-family: "Font Awesome 6 Pro";
  font-size: 14px;
  font-weight: 700;
  content: "\e0ae";
  position: absolute;
  top: 50%;
  left: 20px;
  transform: translateY(-50%);
}
.header-2 .header-middle-inner .header-middle-left .category-form-wrap {
  padding: 0;
  border: none;
}
@media (max-width: 1600px) {
  .header-2 .header-middle-inner .header-middle-left .category-form-wrap {
    max-width: 500px;
  }
}
@media (max-width: 1399px) {
  .header-2 .header-middle-inner .header-middle-left .category-form-wrap {
    max-width: 400px;
  }
}
.header-2 .header-middle-inner .header-middle-left .category-form-wrap .header-form .form-control {
  border: 1px solid var(--rr-color-border-1);
  padding: 12px 150px 12px 20px;
  border-radius: 100px;
}
.header-2 .header-middle-inner .header-middle-left .category-form-wrap .header-form .submit {
  padding: 13px 20px;
  right: 6px;
  border-radius: 100px;
}
.header-2 .header-middle-inner .header-middle-left .category-form-wrap .header-form .submit i {
  transform: rotate(0);
}
@media (max-width: 1399px) {
  .header-2 .header-middle-inner .header-middle-right .contact-item-list li:not(:last-of-type) {
    margin-right: 10px;
    padding-right: 10px;
  }
}
.header-2 .header-middle-inner .header-middle-right .contact-item-list .login-btn {
  background-color: var(--rr-color-grey-1);
  font-size: 14px;
  font-weight: 500;
  height: 45px;
  padding: 0 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 100px;
}
.header-2 .header-middle-inner .header-middle-right .contact-item-list .header-cart-btn {
  background-color: var(--rr-color-theme-green);
  display: flex;
  align-items: center;
  padding: 0 25px 0 10px;
  border-radius: 100px;
}
.header-2 .header-middle-inner .header-middle-right .contact-item-list .header-cart-btn .icon {
  background-color: transparent;
  border-radius: 0;
  color: var(--rr-color-common-white);
}
.header-2 .header-middle-inner .header-middle-right .contact-item-list .header-cart-btn .icon:hover {
  background-color: transparent;
}
.header-2 .header-middle-inner .header-middle-right .contact-item-list .header-cart-btn span {
  color: var(--rr-color-common-white);
  font-size: 16px;
  font-weight: 700;
  line-height: 1;
}
.header-2 .primary-header {
  background-color: var(--rr-color-theme-green);
}
@media only screen and (max-width: 992px) {
  .header-2 .primary-header {
    background-color: var(--rr-color-common-white);
  }
}
.header-2 .primary-header .primary-header-inner {
  background-color: transparent;
  padding: 0;
}
/* ... */

